feat(drawingCanvas): adding the initial code for drawing canvas

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 </head>
 
 <body>
-    <div id="toolbar">
-        <button id="brushToolButton">Brush</button>
-        <button id="eraserToolButton">Eraser</button>
-        <button id="rectangleToolButton">Rectangle</button>
-        <button id="circleToolButton">Circle</button>
-        <button id="textToolButton">Text</button> <!-- Text Tool Button -->
-    </div>
-
-    <div id="canvasContainer">
-        <canvas id="drawingCanvas" width="800" height="600"></canvas>
+    <div id="mainContainer">
+        <div id="toolbar">
+            <button id="brushToolButton">Brush</button>
+            <button id="eraserToolButton">Eraser</button>
+            <button id="rectangleToolButton">Rectangle</button>
+            <button id="circleToolButton">Circle</button>
+            <button id="textToolButton">Text</button>
+        </div>
+        <div id="canvasContainer">
+            <canvas id="drawingCanvas" width="800" height="600"></canvas>
+        </div>
     </div>
 
     <script type="module" src="app.js"></script>
