feat(drawingCanvas): adding the initial code for drawing canvas

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <option value="invert">Invert</option>
                 <option value="grayscale">Grayscale</option>
             </select>
+            <button id="clearCanvasButton">Clear Canvas</button>
         </div>
         <div id="canvasContainer">
             <canvas id="drawingCanvas" width="800" height="600"></canvas>
