--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div id="canvasContainer">
             <canvas id="drawingCanvas" width="800" height="600"></canvas>
         </div>
+        <input type="color" id="colorPickerInput" value="#000000"> <!-- Color Picker -->
     </div>
 
     <script type="module" src="./src/app.js"></script>
